...
                    ),
                  ],
                );
              }

              return TextFormField(
                key: const Key('institucionField'),
                controller: _institutionController,
                focusNode: widget.institutionFocusNode,
                decoration: InputDecoration(
                  labelText: 'Institución',
                  hintText: 'Seleccione una institución',
                  suffixIcon: const Icon(Icons.arrow_drop_down),
...
